stopping overflow for mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   font-family: "Montserrat", sans-serif;
 }
 
+html,body {
+  overflow-x: hidden;
+}
+
 body {
   background-color: #111;
 }
